@@ -26,6 +26,7 @@ MovieJukebox 2.2 BETA
   - Fixed defect #1643 No director info in XML file
   - Fixed defect #1646 IMDb NFO not being read correctly
   - Fixed defect #1648 Problem with MovieDbPosterPlugin
+  - Fixed defect #1634 SratimPlugin - download subtitles does not work due to website redesign
 
 MovieJukebox 2.1
 ----------------
